# finite-resonance-widths

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: 1807.02079.Fits.cpp  1807.02079.TDep.cpp  1807.02079.Tdep.cpp  CMakeLists.txt
